# trecul

./: CMakeLists.txt  LICENSE  README
ads-df/: AsynchronousFileSystem.hh  CMakeLists.txt  CompileTimeLogicalOperator.cc  CompileTimeLogicalOperator.hh  ConcurrentFifo.hh  ConstantScan.cc  ConstantScan.hh  DataflowRuntime.cc  DataflowRuntime.hh  FileSystem.cc  FileSystem.hh  FileWriteOperator.cc  FileWriteOperator.hh  GraphBuilder.cc  GraphBuilder.hh  HdfsOperator.cc  HdfsOperator.hh  LogicalOperator.cc  LogicalOperator.hh  LoserTree.hh  Merger.cc  Merger.hh  QueueImport.cc  QueueImport.hh  RecordParser.cc  RecordParser.hh  RuntimeOperator.cc  RuntimeOperator.hh  RuntimePlan.cc  RuntimePlan.hh  RuntimePort.hh  RuntimeProcess.cc  RuntimeProcess.hh  ads-df.cc  pipes.cc
ads-df/test/: CMakeLists.txt  hadoop-test.cc  test.cc  testDriver.pl
ads-df/test/cross_join_test1/: output.txt.expected  test_cross_join.iql
ads-df/test/cross_join_test2/: output.txt.expected  test_cross_join_residual.iql
ads-df/test/filter_test1/: simple_filter.iql
ads-df/test/filter_test2/: output.txt.expected  simple_filter_limit.iql
ads-df/test/filter_test3/: output.txt.expected  simple_filter_predicate_and_limit.iql
ads-df/test/filter_test4/: output1.txt.expected  output2.txt.expected  output3.txt.expected  simple_filter.iql
ads-df/test/filter_test5/: output.txt.expected  simple_filter.iql
ads-df/test/hash_anti_semi_join_test1/: simple_join.iql
ads-df/test/hash_anti_semi_join_test2/: output.txt.expected  simple_join.iql
ads-df/test/hash_full_outer_join_test1/: simple_join.iql
ads-df/test/hash_full_outer_join_test2/: format.txt.expected  simple_join.iql
ads-df/test/hash_full_outer_join_test3/: format.txt.expected  output.txt.expected  simple_join.iql
ads-df/test/hash_full_outer_join_test4/: format.txt.expected  simple_join.iql
ads-df/test/hash_group_by_test1/: simple_hash_distinct.iql
ads-df/test/hash_group_by_test10/: hash_group_by.iql  output.txt.expected  simple_text.txt
ads-df/test/hash_group_by_test11/: output.txt.expected  simple_text.txt
ads-df/test/hash_group_by_test12/: hash_group_by.iql
ads-df/test/hash_group_by_test13/: hash_group_by_init_update.iql
ads-df/test/hash_group_by_test14/: output.txt.expected  simple_hash_group_by.iql
ads-df/test/hash_group_by_test15/: hash_group_by.iql
ads-df/test/hash_group_by_test16/: hash_group_by.iql  output.txt.expected
ads-df/test/hash_group_by_test17/: hash_group_by.iql  output.txt.expected
ads-df/test/hash_group_by_test2/: simple_hash_group_by.iql
ads-df/test/hash_group_by_test3/: output.txt.expected  simple_hash_group_by_max.iql
ads-df/test/hash_group_by_test4/: output.txt.expected  simple_hash_group_by_min.iql
ads-df/test/hash_group_by_test5/: hash_group_by_with_case.iql
ads-df/test/hash_group_by_test6/: hash_group_by.iql  output.txt.expected
ads-df/test/hash_group_by_test7/: hash_group_by.iql
ads-df/test/hash_group_by_test8/: hash_group_by.iql  output.txt.expected
ads-df/test/hash_group_by_test9/: hash_group_by.iql  output.txt.expected
ads-df/test/hash_join_test1/: simple_join.iql
ads-df/test/hash_join_test10/: simple_join.iql
ads-df/test/hash_join_test11/: output.txt.expected  simple_join.iql
ads-df/test/hash_join_test2/: simple_join.iql
ads-df/test/hash_join_test3/: simple_join.iql
ads-df/test/hash_join_test4/: simple_join_with_residual.iql
ads-df/test/hash_join_test5/: output.txt.expected  simple_join.iql
ads-df/test/hash_join_test6/: output.txt.expected  simple_join.iql
ads-df/test/hash_join_test7/: simple_join.iql
ads-df/test/hash_join_test8/: input2.txt  multiple_join_keys.iql
ads-df/test/hash_join_test9/: simple_join.iql
ads-df/test/hash_left_outer_join_test1/: output.txt.expected  simple_join.iql
ads-df/test/hash_left_outer_join_test2/: format.txt.expected  output.txt.expected  simple_join.iql
ads-df/test/hash_left_outer_join_test3/: format.txt.expected  output.txt.expected  simple_join.iql
ads-df/test/hash_left_outer_join_test4/: format.txt.expected  simple_join.iql
ads-df/test/hash_right_outer_join_test1/: simple_join.iql
ads-df/test/hash_right_outer_join_test2/: simple_join.iql
ads-df/test/hash_right_outer_join_test3/: simple_join.iql
ads-df/test/hash_right_outer_join_test4/: simple_join.iql
ads-df/test/hash_semi_join_test1/: simple_join.iql
ads-df/test/hash_semi_join_test2/: simple_join.iql
ads-df/test/hybrid_group_by_test1/: simple_hash_group_by.iql
ads-df/test/hybrid_group_by_test2/: output.txt.expected  simple_sort_group_by.iql
ads-df/test/hybrid_group_by_test3/: output.txt.expected  simple_hybrid_sort_hash_group_by.iql
ads-df/test/hybrid_group_by_test4/: sort_group_by.iql
ads-df/test/merge_anti_semi_join_test1/: simple_join.iql
ads-df/test/merge_anti_semi_join_test2/: simple_join.iql
ads-df/test/merge_full_outer_join_test1/: output.txt.expected  simple_join.iql
ads-ql/: CMakeLists.txt  CodeGenerationContext.cc  CodeGenerationContext.hh  GetVariablesPass.cc  GetVariablesPass.h  IQL.g  IQL.tokens  IQLAnalyze.c  IQLAnalyze.g  IQLAnalyze.h  IQLBuildTree.h  IQLExpression.cc  IQLExpression.hh  IQLGetVariables.c  IQLGetVariables.g  IQLGetVariables.h  IQLGetVariables.tokens  IQLGraphBuilder.hh  IQLInterpreter.cc  IQLInterpreter.hh  IQLLexer.c  IQLLexer.h  IQLParser.c  IQLParser.h  IQLToLLVM.c  IQLToLLVM.g  IQLToLLVM.h  IQLTypeCheck.c  IQLTypeCheck.g  IQLTypeCheck.h  IQLTypeCheck.tokens  LLVMGen.cc  LLVMGen.h  RecordBuffer.hh  RecordType.cc  RecordType.hh  SuperFastHash.c  SuperFastHash.h  TypeCheckContext.cc  TypeCheckContext.hh
ads-ql/test/: CMakeLists.txt  test.cc
cmake/modules/: FindHADOOP.cmake  FindLLVM.cmake  FindURIPARSER.cmake
decNumber/: CMakeLists.txt
(+143 files in other folders)
